--- a/public/css/paint.css
+++ b/public/css/paint.css
@@ -1,9 +1,10 @@
 body {
-  background-color: skyblue;
+  background-color: #ddd;
 }
 
 canvas {
   background-color: white;
+  border: 3px solid #bbb;
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
@@ -19,10 +20,42 @@ canvas {
   height: 30px;
 }
 
-#progress {
-  width: 100%;
+.slider {
+  width: 100px;
   text-align: center;
-  margin-top: 20px;
-  font-size: 18px;
-  color: gray;
+  position: absolute;
+  left: 50px;
+  top: 150px;
+ }
+
+.slider-wrapper {
+  position: relative;
+  height: 200px;
+  width: 12px;
+  margin: 0 auto;
+}
+
+.slider-outline {
+  width: 10px;
+  height: 200px;
+  border-radius: 5px;
+  border: 2px solid #888;
+  background-color: white;
+  position: absolute;
+  bottom: 0px;
+}
+
+.slider-fill {
+ width: 10px;
+ height: 0;
+ border-radius: 0 0 3px 3px;
+ position: absolute;
+ bottom: 2px;
+ left: 2px;
+}
+
+.slider-label {
+  font-weight: 600;
+  color: #555;
+  margin-top: 5px;
 }
