--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,7 @@
   <div class="slider-label">Spill Warning </div>
 </div>
 <canvas id="game" width=500px height=500px></canvas>
+<canvas id="reticle" width=60px height=60px></canvas>
 <input type="button" value="Erase" id="eraser"/>
 </body>
 </html>
