load jquery locally

--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title> Paint By Gender </title>
 <link rel="stylesheet" href="./css/paint.css">
-<script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="./lib/jquery-3.3.1.min.js"></script>
 <script src="./js/paint.js"></script>
 </head>
 <body>
