updates to font and button styling

--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title> Paint By Gender </title>
 <link rel="stylesheet" href="./css/paint.css">
+<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Oswald" rel="stylesheet">
 <script src="./lib/jquery-3.3.1.min.js"></script>
 <script src="./js/paint.js"></script>
 </head>
@@ -21,10 +22,10 @@
     <div class="slider-fill"></div>
     <div class="slider-mark"></div>
   </div>
-  <div class="slider-label">Spill Warning </div>
+  <div class="slider-label">Transgression </div>
 </div>
 <canvas id="game" width=500px height=500px></canvas>
 <canvas id="reticle" width=100px height=100px></canvas>
-<input type="button" value="Erase" id="eraser"/>
+<div id="eraser">ERASE</div>
 </body>
 </html>
