--- a/public/css/paint.css
+++ b/public/css/paint.css
@@ -35,6 +35,20 @@ body {
   display: block;
   width: 100px;
   height: 30px;
+  line-height: 30px;
+  border-radius: 5px;
+  border: 3px solid white;
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  font-family: 'Oswald', sans-serif;
+  cursor: pointer;
+}
+
+#eraser:hover {
+  background-color: purple;
 }
 
 #percent-painted {
@@ -101,7 +115,10 @@ body {
 }
 
 .slider-label {
+  font-family: 'Amatic SC', sans-serif;
   font-weight: 600;
+  font-size: 24px;
   color: white;
   margin-top: 5px;
+  text-shadow: 2px 2px 6px #777;
 }
