--- a/public/css/paint.css
+++ b/public/css/paint.css
@@ -11,6 +11,14 @@ body {
   height: 100vh;
 }
 
+#layout td {
+  width: 33%;
+}
+
+#sliders {
+  padding-right: 30px;
+}
+
 #game {
   background-color: white;
   margin-top: 15px;
@@ -51,16 +59,6 @@ body {
   background-color: purple;
 }
 
-#percent-painted {
-  left: 10px;
-  top: 150px;
-}
-
-#spill-warning {
-  left: 110px;
-  top: 150px;
-}
-
 #spill-warning .slider-outline {
   background: linear-gradient(red,yellow 45%,#0f0);
   opacity: 0.75;
@@ -73,9 +71,10 @@ body {
 }
 
 .slider {
-  width: 100px;
+  width: 110px;
+  margin-bottom: 20px;
   text-align: center;
-  position: absolute;
+  display: inline-block;
  }
 
 .slider-wrapper {
