--- a/views/index.html
+++ b/views/index.html
@@ -29,6 +29,7 @@
       </div>
     </td>
     <td id="main">
+      <div id="canvas-texture"></div>
       <canvas id="game" width=500px height=500px></canvas>
       <canvas id="reticle" width=100px height=100px></canvas>
       <div id="eraser">ERASE</div>
