--- a/views/index.html
+++ b/views/index.html
@@ -4,13 +4,28 @@
 <meta charset="utf-8">
 <title> Paint By Gender </title>
 <link rel="stylesheet" href="./css/paint.css">
-<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Oswald" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Exo+2:200,400|Megrim" rel="stylesheet">
 <script src="./lib/jquery-3.3.1.min.js"></script>
 <script src="./js/paint.js"></script>
 </head>
 <body>
 <table id="layout">
-  <tr>
+  <tr id="header">
+    <td id="title">
+      <a href="#">Paint by gender</a>
+    </td>
+    <td id="status">
+      <span id="level-number">Level 1</span>
+      <span id="level-separator">|</span>
+      <span id="level-name">Demo</span>
+      <span id="level-icon-wrapper">
+        <span id="level-icon"></span>
+      </span>
+    </td>
+    <td></td>
+  </tr>
+  <tr class="spacer"></tr>
+  <tr id="body">
     <td id="sliders" align="right">
       <div class="slider" id="percent-painted">
         <div class="slider-wrapper">
@@ -32,9 +47,15 @@
       <div id="canvas-texture"></div>
       <canvas id="game" width=500px height=500px></canvas>
       <canvas id="reticle" width=100px height=100px></canvas>
-      <div id="eraser">ERASE</div>
     </td>
     <td></td>
+  </tr>
+  <tr id="footer">
+    <td/>
+    <td>
+      <div id="eraser">ERASE</div>
+    </td>
+    <td/>
   </tr>
 </table>
 </body>
