add help icon; adjust header styling

--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,7 @@
 <title> Paint By Gender </title>
 <link rel="stylesheet" href="./css/paint.css">
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Exo+2:200,400|Megrim" rel="stylesheet">
+<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 <script src="./lib/jquery-3.3.1.min.js"></script>
 <script src="./js/paint.js"></script>
 </head>
@@ -22,7 +23,9 @@
         <span id="level-icon"></span>
       </span>
     </td>
-    <td></td>
+    <td id="help">
+      <div id="help-icon"> ? </div>
+    </td>
   </tr>
   <tr class="spacer"></tr>
   <tr id="body">
