--- a/public/css/paint.css
+++ b/public/css/paint.css
@@ -17,6 +17,7 @@ body {
 
 #header {
   color: white;
+  opacity: .8;
   background-color: purple;
   font-family: 'Megrim', cursive;
 }
@@ -30,12 +31,12 @@ body {
 }
 
 #title {
-  padding-left: 10px;
+  padding-left: 5px;
   font-size: 30px;
   font-weight: 600;
 }
 
-#title a {
+#header a {
   color: inherit;
   text-decoration: none;
 }
@@ -62,6 +63,36 @@ body {
 #level-icon-wrapper {
   float: right;
   font-size: 22px;
+}
+
+#help {
+  text-align: right;
+  padding-right: 5px;
+}
+
+#help-icon {
+  display: inline-block;
+  cursor: pointer;
+  width: 32px;
+  height: 32px;
+  color: purple;
+  background: white;
+  border-radius: 16px;
+  line-height: 30px;
+  text-align: center;
+  font-family: 'Exo 2', sans-serif;
+  font-weight: 600;
+  font-size: 28px;
+}
+
+#help-icon:hover {
+  background: purple;
+  color: white;
+  border: 3px solid white;
+  border-radius: 26px;
+  width: 26px;
+  height: 26px;
+  line-height: 25px;
 }
 
 #layout td {
@@ -181,7 +212,6 @@ body {
   position: absolute;
   left: 2px;
   bottom: 2px;
-  background-color: rgba(50, 50, 50, 0.6);
 }
 
 .slider-label {
