--- a/views/index.html
+++ b/views/index.html
@@ -46,13 +46,13 @@
         <div class="slider-label">Transgression </div>
       </div>
       <div id="counters">
-        <div class="counter-wrapper">
-          <span class="counter">Time remaining =</span>
-          <span class="counter" id="time">0:00</span>
+        <div class="counter-wrapper" id="time-wrapper">
+          <span>Time remaining =</span>
+          <span id="time">0:00</span>
         </div>
-        <div class="counter-wrapper">
-          <span class="counter">Strokes used =</span>
-          <span class="counter" id="strokes">0</span>
+        <div class="counter-wrapper" id="strokes-wrapper">
+          <span>Strokes used =</span>
+          <span id="strokes">0</span>
         </div>
       </div>
     </td>
