--- a/views/index.html
+++ b/views/index.html
@@ -30,6 +30,8 @@
   <tr class="spacer"></tr>
   <tr id="body">
     <td id="stats" align="center">
+      <canvas height=180px width=180px id="time-ring"></canvas>
+      <div id="time">0:00</div>
       <div class="slider" id="percent-painted">
         <div class="slider-wrapper">
           <div class="slider-outline"></div>
@@ -44,16 +46,6 @@
           <div class="slider-mark"></div>
         </div>
         <div class="slider-label">Transgression </div>
-      </div>
-      <div id="counters">
-        <div class="counter-wrapper" id="time-wrapper">
-          <span>Time remaining =</span>
-          <span id="time">0:00</span>
-        </div>
-        <div class="counter-wrapper" id="strokes-wrapper">
-          <span>Strokes used =</span>
-          <span id="strokes">0</span>
-        </div>
       </div>
     </td>
     <td id="main">
