start building tool options UI; refactor option model

--- a/views/index.html
+++ b/views/index.html
@@ -55,13 +55,31 @@
     </td>
     <td id="tools" align="center">
       <div class="tool-wrapper">
-        <span class="tool-title">Brush size:</span>
+        <div class="tool-title">Brush size:</div>
+        <div class="option-wrapper">
+          <div class="tool-option"></div>
+          <div class="tool-option"></div>
+          <div class="tool-option"></div>
+          <div class="option-selector"></div>
+        </div>
       </div>
       <div class="tool-wrapper">
         <span class="tool-title">Brush shape:</span>
+        <div class="option-wrapper">
+          <div class="tool-option"></div>
+          <div class="tool-option"></div>
+          <div class="tool-option"></div>
+          <div class="option-selector"></div>
+        </div>
       </div>
       <div class="tool-wrapper">
         <span class="tool-title">Tool type:</span>
+        <div class="option-wrapper">
+          <div class="tool-option"></div>
+          <div class="tool-option"></div>
+          <div class="tool-option"></div>
+          <div class="option-selector"></div>
+        </div>
       </div>
     </td>
   </tr>
