--- a/public/css/paint.css
+++ b/public/css/paint.css
@@ -234,14 +234,14 @@ body {
 
 #time-ring {
   position: absolute;
-  top: 0;
+  top: 5px;
   left: 50%;
   transform: translate(-50%, 0);
 }
 
 #time {
   position: absolute;
-  top: 46px;
+  top: 51px;
   left: 50%;
   transform: translate(-50%, 0);
   font-size: 70px;
@@ -267,11 +267,38 @@ body {
   min-width: 200px;
   max-width: 350px;
   height: 130px;
+  text-align: left;
 }
 
 .tool-title {
   font-family: 'Amatic SC', sans-serif;
   font-size: 34px;
   font-weight: 600;
-  float: left;
+}
+
+.tool-option {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  margin-top: 5px;
+  margin-left: 7px;
+  margin-right: 7px;
+  background-color: orange;
+}
+
+.option-wrapper {
+  position: relative;
+  margin-top: 8px;
+  display: block;
+  text-align: center;
+}
+
+.option-selector {
+  position: absolute;
+  top: 0;
+  left: 49px;
+  width: 45px;
+  height: 45px;
+  border: 3px solid #999;
+  border-radius: 4px;
 }
