--- a/public/css/paint.css
+++ b/public/css/paint.css
@@ -283,7 +283,7 @@ body {
   margin-top: 5px;
   margin-left: 7px;
   margin-right: 7px;
-  background-color: orange;
+  background-color: lightgray;
 }
 
 .option-wrapper {
@@ -301,4 +301,8 @@ body {
   height: 45px;
   border: 3px solid #999;
   border-radius: 4px;
+}
+
+.focus, .option-selector.focus {
+  border: 3px solid #ffd400;
 }
