--- a/public/css/paint.css
+++ b/public/css/paint.css
@@ -142,27 +142,26 @@ body {
   display: none;
 }
 
-#eraser {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 15px;
-  display: block;
-  width: 100px;
-  height: 30px;
-  line-height: 30px;
+.bottom-btn {
+  display: inline-block;
+  margin: 15px 7px 0 7px;
+  width: 115px;
+  height: 32px;
+  line-height: 32px;
   border-radius: 5px;
-  border: 3px solid white;
   color: white;
+  background-color: purple;
   text-align: center;
-  font-size: 20px;
+  font-size: 19px;
   font-weight: 600;
   letter-spacing: 1px;
   font-family: 'Exo 2', sans-serif;
   cursor: pointer;
 }
 
-#eraser:hover {
-  background-color: purple;
+.bottom-btn:hover {
+  background-color: white;
+  color: purple;
 }
 
 #stats {
@@ -277,19 +276,21 @@ body {
 }
 
 .tool-option {
+  position: relative;
   display: inline-block;
   width: 40px;
   height: 40px;
-  margin-top: 5px;
+  margin-top: 7px;
   margin-left: 7px;
   margin-right: 7px;
-  background-color: lightgray;
   cursor: pointer;
+  background-color: rgba(80, 80, 80, 0.25);
+  border-radius: 3px;
 }
 
 .option-wrapper {
   position: relative;
-  margin-top: 8px;
+  margin-top: 10px;
   display: block;
   text-align: center;
 }
@@ -298,13 +299,34 @@ body {
   pointer-events: none;
   position: absolute;
   top: 0;
-  left: 49px;
-  width: 45px;
-  height: 45px;
-  border: 3px solid #999;
+  left: 45px;
+  width: 48px;
+  height: 48px;
+  border: 3px solid white;
   border-radius: 4px;
 }
 
 .focus, .option-selector.focus {
   border: 3px solid #fbff00;
+}
+
+#paint-brush-wrapper {
+  position: absolute;
+  top: 5px;
+  left: 3px;
+  pointer-events: none;
+}
+
+#lipstick {
+  position: absolute;
+  top: 3px;
+  left: 2px;
+  pointer-events: none;
+}
+
+#pill-wrapper {
+  position: absolute;
+  top: 4px;
+  left: 2px;
+  pointer-events: none;
 }
