--- a/public/css/paint.css
+++ b/public/css/paint.css
@@ -182,6 +182,19 @@ body {
   cursor: default;
 }
 
+.flash {
+  font-family: 'Amatic SC', cursive;
+  font-size: 150px;
+  font-weight: 400;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  z-index: 3;
+  color: white;
+  text-shadow: 5px 0 5px #f99, -5px 0 5px #99bfe6;
+}
+
 #stats {
   position: relative;
   vertical-align: bottom;
