--- a/views/index.html
+++ b/views/index.html
@@ -49,6 +49,7 @@
       </div>
     </td>
     <td id="main">
+      <div id="overlay-text">Ready?</div>
       <div id="canvas-texture" class="blurred"></div>
       <canvas id="game" class="blurred" width=500px height=500px></canvas>
       <canvas id="reticle" width=100px height=100px></canvas>
@@ -99,7 +100,8 @@
     <td align="center">
       <div id="eraser" class="bottom-btn">ERASE</div>
       <div id="restart" class="bottom-btn">RESTART</div>
-      <div id="start" class="bottom-btn inactive">START</div>
+      <div id="start" class="bottom-btn">START</div>
+      <div id="retry" class="bottom-btn">RETRY</div>
     </td>
     <td/>
   </tr>
