improve reticle handling

--- a/views/index.html
+++ b/views/index.html
@@ -51,7 +51,7 @@
     <td id="main">
       <div id="overlay-text">Ready?</div>
       <div id="canvas-texture" class="blurred"></div>
-      <canvas id="game" class="blurred" width=500px height=500px></canvas>
+      <canvas id="game" width=500px height=500px></canvas>
       <canvas id="reticle" width=100px height=100px></canvas>
       <div id="game-background"></div>
     </td>
