--- a/public/css/paint.css
+++ b/public/css/paint.css
@@ -223,16 +223,32 @@ body {
 }
 
 #overlay-text {
-  font-family: 'Amatic SC', cursive;
-  font-size: 120px;
-  font-weight: 400;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
   z-index: 4;
+}
+
+#overlay-title {
+  font-family: 'Amatic SC', cursive;
+  font-size: 120px;
+  font-weight: 400;
   color: white;
+  text-align: center;
   text-shadow: 0 0 6px #333;
+}
+
+#overlay-body {
+  font-family: 'Exo 2', sans-serif;
+  font-size:36px;
+  font-weight: 600;
+  padding-left: 20px;
+  margin-top: 15px;
+  z-index: 4;
+  color: purple;
+  text-shadow: 0 0 10px white;
+  width: 400px;
 }
 
 #stats {
