--- a/views/index.html
+++ b/views/index.html
@@ -48,7 +48,10 @@
       </div>
     </td>
     <td id="main">
-      <div id="overlay-text">Ready?</div>
+      <div id="overlay-text">
+        <div id="overlay-title"></div>
+        <div id="overlay-body"></div>
+      </div>
       <div id="canvas-texture" class="blurred"></div>
       <canvas id="game" width=500px height=500px></canvas>
       <canvas id="reticle" width=100px height=100px></canvas>
