--- a/views/index.html
+++ b/views/index.html
@@ -49,7 +49,7 @@
     </td>
     <td id="main">
       <div id="overlay-text">
-        <div id="overlay-title"></div>
+        <div id="overlay-title" class="larger-title"></div>
         <div id="overlay-body"></div>
       </div>
       <div id="canvas-texture" class="blurred"></div>
@@ -101,9 +101,8 @@
     <td/>
     <td align="center">
       <div id="eraser" class="bottom-btn">ERASE</div>
-      <div id="restart" class="bottom-btn">RESTART</div>
       <div id="start" class="bottom-btn">START</div>
-      <div id="retry" class="bottom-btn">RETRY</div>
+      <div id="retry" class="bottom-btn"></div>
     </td>
     <td/>
   </tr>
