--- a/views/index.html
+++ b/views/index.html
@@ -85,7 +85,7 @@
             </div>
           </div>
           <div class="tool-option">
-            <img id="lipstick" src='../img/lipstick.svg'></img>
+            <img id="lipstick" src='./img/lipstick.svg'></img>
           </div>
           <div class="tool-option">
             <div id="pill-wrapper"
