--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
 <script src="./js/paint.js"></script>
 </head>
 <body>
-<table id="layout">
+<table id="layout" class="unselectable">
   <tr id="header">
     <td id="title">
       <a href="#">Paint by gender</a>
