add link to itch

--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
 <table id="layout" class="unselectable">
   <tr id="header">
     <td id="title">
-      <a href="#">Paint by gender</a>
+      <a href="https://belladonnagable.itch.io/paint-by-gender">Paint by gender</a>
     </td>
     <td id="status">
       <span id="level-number">Level 1</span>
