replace canvas blur with css blur to support safari

--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,7 @@
         <div id="overlay-title" class="larger-title"></div>
         <div id="overlay-body"></div>
       </div>
-      <div id="canvas-texture" class="blurred"></div>
+      <div id="canvas-texture"></div>
       <canvas id="game" width=500px height=500px></canvas>
       <canvas id="reticle" width=100px height=100px></canvas>
       <div id="game-background"></div>
