--- a/views/index.html
+++ b/views/index.html
@@ -18,9 +18,7 @@
       <span id="level-number">Level 1</span>
       <span id="level-separator">|</span>
       <span id="level-name">Demo</span>
-      <span id="level-icon-wrapper">
-        <span id="level-icon"></span>
-      </span>
+      <span id="level-icon-wrapper"></span>
     </td>
     <td id="help">
       <div id="help-icon"> ? </div>
