--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,7 @@
 <title> Paint By Gender </title>
 <link rel="stylesheet" href="./css/paint.css">
 <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+<script src="./lib/tippy.all.min.js"></script>
 <script src="./lib/jquery-3.3.1.min.js"></script>
 <script src="./js/paint.js"></script>
 </head>
@@ -86,7 +87,7 @@
             <img id="lipstick" src='./img/lipstick.svg'></img>
           </div>
           <div class="tool-option">
-            <div id="pill-wrapper"
+            <div id="pill-wrapper">
               <i class="fas fa-2x fa-pills" data-fa-transform="shrink-2"></i>
             </div>
           </div>
