--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
           <div class="slider-outline"></div>
           <div class="slider-fill"></div>
         </div>
-        <div class="slider-label">% Painted </div>
+        <div class="slider-label">% Painted</div>
       </div>
       <div class="slider" id="spill-warning">
         <div class="slider-wrapper">
@@ -43,12 +43,12 @@
           <div class="slider-fill"></div>
           <div class="slider-mark"></div>
         </div>
-        <div class="slider-label">Transgression </div>
+        <div class="slider-label">Transgression</div>
       </div>
     </td>
     <td id="main">
       <div id="overlay-text">
-        <div id="overlay-title" class="larger-title"></div>
+        <div id="overlay-title"></div>
         <div id="overlay-body"></div>
       </div>
       <div id="canvas-texture"></div>
@@ -78,7 +78,7 @@
       <div class="tool-wrapper" id="tool-type">
         <span class="tool-title">Tool type:</span>
         <div class="option-wrapper">
-          <div class="tool-option">
+          <div class="tool-option option-active">
             <div id="paint-brush-wrapper">
               <i class="fas fa-2x fa-paint-brush" data-fa-transform="shrink-2"></i>
             </div>
@@ -100,7 +100,7 @@
     <td/>
     <td align="center">
       <div id="eraser" class="bottom-btn">ERASE</div>
-      <div id="start" class="bottom-btn">START</div>
+      <div id="start" class="bottom-btn">START LEVEL</div>
       <div id="retry" class="bottom-btn"></div>
     </td>
     <td/>
