enabled vs disabled option colors; improve selector styling

--- a/views/index.html
+++ b/views/index.html
@@ -78,7 +78,7 @@
       <div class="tool-wrapper" id="tool-type">
         <span class="tool-title">Tool type:</span>
         <div class="option-wrapper">
-          <div class="tool-option option-active">
+          <div class="tool-option">
             <div id="paint-brush-wrapper">
               <i class="fas fa-2x fa-paint-brush" data-fa-transform="shrink-2"></i>
             </div>
