--- a/public/css/paint.css
+++ b/public/css/paint.css
@@ -428,19 +428,16 @@ body {
   pointer-events: none;
   position: absolute;
   top: 0;
-  left: 45px;
   width: 48px;
   height: 48px;
   border: 3px solid white;
   border-radius: 4px;
 }
 
-.option-active {
-  color: purple;
-}
-
-.option-inactive {
-
+.option-selector.disabled {
+  border: 2px dotted white;
+  width: 49px;
+  height: 49px;
 }
 
 .focus, .option-selector.focus {
