--- a/public/css/paint.css
+++ b/public/css/paint.css
@@ -225,6 +225,14 @@ body {
   z-index: 4;
   color: white;
   text-shadow: 4px 0 5px #f99, -4px 0 5px #99bfe6;
+  white-space: nowrap;
+}
+
+.flash.small {
+  font-weight: 600;
+  color: purple;
+  font-size: 80px;
+  text-shadow: 5px 5px 0 white;
 }
 
 .unselectable {
@@ -274,12 +282,13 @@ body {
 #overlay-body.start-text {
   color: white;
   opacity: 1;
-  text-shadow: 0 0 15px #555, 1px 1px 2px black;
-  letter-spacing: -1px;
+  text-shadow: 0 0 1px purple, 2px 2px 0 purple;
   margin-top: 20px;
-  font-weight: 400;
+  font-weight: 600;
   font-size:28px;
-  line-height: 37px;
+  line-height: 38px;
+  text-align: center;
+  padding: 0;
 }
 
 #overlay-body.end-text {
@@ -472,6 +481,11 @@ body {
 
 .tippy-tooltip.gray-theme {
   background-color: rgba(90, 90, 90, 0.75);
+  font-family: 'Exo 2';
+  font-weight: 600;
+  font-size: 14px;
+  color: #eee;
+  text-shadow: 1px 1px 3px #555;
 }
 
 .tippy-popper[x-placement^=bottom] .tippy-tooltip.gray-theme .tippy-arrow {
