--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,6 +1,7 @@
 @bgColorLight: #b59cc4;
 @bgColorDark: #ac8fbc;
 @headerColor: purple;
+@tooltipBg: rgba(61, 0, 81, 0.74);
 
 html {
     background-color: @bgColorDark;
@@ -125,7 +126,7 @@ body {
 
 #canvas-texture {
     pointer-events: none;
-    background-image: url('../img/canvas_texture.png');
+    background-image: url('../../img/canvas_texture.png');
     background-size: 250px;
     mix-blend-mode: multiply;
     width: 500px;
@@ -409,6 +410,10 @@ body {
     background-color: rgba(80, 80, 80, 0.2);
     border-radius: 3px;
 
+    &.disabled {
+        cursor: not-allowed;
+    }
+
     &:not(.disabled):hover {
         background-color: rgb(128,0,128);
     }
@@ -462,18 +467,37 @@ body {
     pointer-events: none;
 }
 
-.tippy-box[data-theme~='gray'] {
-    background-color: rgba(90, 90, 90, 0.75);
+.tippy-box {
     font-family: 'Exo 2';
-    font-weight: 600;
-    font-size: 14px;
-    color: #eee;
-    text-shadow: 1px 1px 3px #555;
 
-    &[data-placement^='bottom'] > .tippy-arrow {
-        &::before {
-        border-bottom-width: 7px;
-        border-bottom-color: rgba(90, 90, 90, 0.75);
+    &[data-theme~='gray'] {
+        background-color: rgba(90, 90, 90, 0.75);
+        font-family: 'Exo 2';
+        font-weight: 600;
+        font-size: 14px;
+        color: #eee;
+        text-shadow: 1px 1px 3px #555;
+
+        &[data-placement^='bottom']>.tippy-arrow {
+            &::before {
+                border-bottom-width: 7px;
+                border-bottom-color: rgba(90, 90, 90, 0.75);
+            }
+        }
+    }
+
+    &[data-theme~='purple'] {
+        background-color: @tooltipBg;
+        font-size: 17px;
+        font-weight: 200;
+        backdrop-filter: blur(2px);
+        padding: 4px;
+
+        &[data-placement^='bottom']>.tippy-arrow {
+            &::before {
+                border-bottom-width: 7px;
+                border-bottom-color: @tooltipBg;
+            }
         }
     }
 }
